--- a/production/css/style.css
+++ b/production/css/style.css
@@ -19,3 +19,18 @@
     border-width: 2px;
     background-color: #f2dede;
 }
+
+.task-desc-footer {
+    background-color: #f5f5f5;
+
+    padding: 0 5% 5px 5%;
+}
+.task-desc-footer hr {
+    margin: 0 0 5px 0;
+}
+.task-footer-title {
+
+    border-top-width: 1px;
+    border-color: grey;
+    font-weight: 600;
+}
